# xr-workspace

./: CMakeLists.txt  SPEC.md  config.example.json  run.sh  xr-game  xrctl
.github/workflows/: build-release.yml  release.yml
packaging/: install.sh
packaging/hotplug/: xr-glasses-hotplugd
packaging/hypr/: xr-workspace.conf
packaging/systemd/: xr-glasses.service
packaging/udev/: 99-viture-xr.rules
protocols/: ext-image-capture-source-v1.xml  hyprland-global-shortcuts-v1.xml  wlr-layer-shell-unstable-v1.xml  wlr-screencopy-unstable-v1.xml  xdg-output-unstable-v1.xml
src/: capture.h  capture_ctx.h  capture_ext.cpp  capture_ext.h  capture_factory.cpp  capture_factory.h  capture_shm.cpp  capture_shm.h  capture_solid.cpp  capture_solid.h  capture_wlr.cpp  capture_wlr.h  config.cpp  config.h  control.cpp  control.h  egl_dmabuf.cpp  egl_dmabuf.h  hypr_ipc.cpp  hypr_ipc.h  json.cpp  json.h  layer-shell-wrap.h  linalg.h  main.cpp  main.cpp.bak  pose.h  pose_breezy.cpp  pose_breezy.h  posesink.h  sink_opentrack.cpp  sink_opentrack.h
test/: test_opentrack_wire.cpp
